2009-02-17
	* Added $battery_short patch, sf.net id #2300911 (thanks Swoog)

2009-02-15
	* Added out_to_x

2009-02-12
	* Added overwrite_file and append_file

2009-02-10
	* Added out_to_stderr

2009-02-08
	* Refactor top code, add top_time to sort by process cpu time (thanks
	sohalt).

2008-12-20
	* Add if_match object comparing strings, floats and ints

2008-12-18
	* Fix segfault for diskiograph*, note the changed order of arguments
	* Fix documentation for all graph objects

2008-12-17
	* Make gateway objects also detect routes with missing RTF_GATEWAY flag

2008-12-15
	* Have a maximum width for all variable length mpd vars
	* Patch to allow escaping newlines in the config (thanks Itai)

2008-12-14
	* Fix disk_protect for linux-2.6.27 (and hopefully above)
	* Improve behaviour of $pb_battery

2008-12-09
	* Add an option to timed_thread_test() to not wait for the interval period
	(so that IMAP IDLE works better)

2008-12-08
	* Fix runtime debugging macros again
	* Big hddtemp rewrite
	* Remove README from git and ignore it
	* Remove obsolete documentation

2008-12-07
	* Removing $freq_dyn and $freq_dyn_g due to license issues (see sf.net
	tracker bug #2166612)
	* Allow more than 9 CPUs for CPU stats (bug 2155500)
	* Fix broken $execbar (bug 2133709)
	* Don't put unit with hddtemp values for consistency (bug 2133107)
	* Limit $battery_percent to 100 (bug 2145006)
	* Fix runtime debugging macros
	* Make unit of all temperature objects selectable
	* Make Conky in dock mode a withdrawn window

2008-12-06
	* Switching from svn to git repository.  The repo can be viewed from
	http://git.omp.am/?p=conky.git;a=summary and you can clone the repo with:
	git clone git://git.omp.am/conky.git
	* Fix for wrong usage of strncat (thanks Pavol)
	* Adds a variable if_xmms2_connected to hide objects when xmms2d is not
	running (thanks Lassi)
	* Fix for buffer overflow with $execi (thanks Cesare)
	* Fetch volume through Audacious API (thanks Erik)

2008-12-06