@@ -1,5 +1,17 @@
 2009-02-17
 	* Added $battery_short patch, sf.net id #2300911 (thanks Swoog)
+	* Patch by Kim Holviala sf.net id #2484548:
+		* change the height of execbar and execibar to be the same as other
+		bars have by default (6 pixels)
+		* treat mixer values as percentages as they're usually 0-100 (switch
+		to spaced_print() with pad_percents)
+		* change temp_print() from snprintf() to spaced_print()
+		* remove decimals from temp_print() as none of the current sources can
+		supply values smaller than 1 degree (C or F, doesn't matter)
+		* add a space between number and the unit in human_readable()
+		* fix number printing in human_readable()
+		* network $upspeed and $downspeed now use human_readable()
+
 
 2009-02-15
 	* Added out_to_x
